src/styles/ascii.css
.ascii-container {
  position: absolute;
  top: 0;
  overflow: hidden;
  width: 100vw;
  height: 130vh;
}

/* Small screens (default) */
.ascii {
  position: absolute;
  object-fit: contain;
  text-align: center;
  top: -10vh;
  left: -20vw;
  font-size:5px;
  height: 130vh;
  
  border: none; 
  pointer-events: none;

  transition: right 1s ease-out, left 1s ease-out;
}

@media screen and (min-width: 576px) {
  .ascii {
    right: -30vw;
    left: auto;
  }
}

@media screen and (min-width: 768px) {
  .ascii {
    right: -20vw;
  }
}

@media screen and (min-width: 992px) {
  .ascii {
    right: -10vw;
  }
}

@media screen and (min-width: 1200px) {
  .ascii {
    right: 0vw;
  }
}

@media screen and (min-width: 1400px) {
  .ascii {
    right: 10vw;
  }
}


/*** LOADING ANIMATION ***/

.ascii-loading {
  position: absolute;
  object-fit: contain;
  text-align: center;
  top: -10vh;
  left: -20vw;
  font-size:5px;
  height: 130vh;
  opacity: 0%;
  
  border: none; 
  pointer-events: none;

  transition: right 1s ease-out 0s;
  animation: LoadAsciiReducedMotion 2s ease-out 1s forwards;
}

/* Load animation */
@media (prefers-reduced-motion: no-preference) {
  .ascii-loading {
    animation: LoadAscii 2s ease-out 1s forwards;
  }
}

@keyframes LoadAsciiReducedMotion {
  0% {opacity: 0%;}
  100% {opacity: 100%;}
}

@keyframes LoadAscii {
  0% {
    left: 0vw;
  }
  100% {
    opacity: 100%;
  }
}

@media screen and (min-width: 576px) {
  .ascii-loading {
    right: -30vw;
    left: auto;
  }

  @keyframes LoadAscii {
    0% {
      right: -60vw;
    }
    100% {
      opacity: 100%;
    }
  }
}

@media screen and (min-width: 768px) {
  .ascii-loading {
    right: -20vw;
  }

  @keyframes LoadAscii {
    0% {
      right: -50vw;
    }
    100% {
      opacity: 100%;
    }
  }
}

@media screen and (min-width: 992px) {
  .ascii-loading {
    right: -10vw;
  }

  @keyframes LoadAscii {
    0% {
      right: -40vw;
    }
    100% {
      opacity: 100%;
    }
  }
}

@media screen and (min-width: 1200px) {
  .ascii-loading {
    right: 0vw;
  }

  @keyframes LoadAscii {
    0% {
      right: -30vw;
    }
    100% {
      opacity: 100%;
    }
  }
}

@media screen and (min-width: 1400px) {
  .ascii-loading {
    right: 10vw;
  }

  @keyframes LoadAscii {
    0% {
      right: 0vw;
    }
    100% {
      opacity: 100%;
    }
  }
}

